--- a/old_version/main_test4/main_test4_20250413.ipynb
+++ b/old_version/main_test4/main_test4_20250413.ipynb
@@ -1585,6 +1585,303 @@
     }
    ],
    "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "修改的代码有问题：",
+   "id": "a7710424fa905b27"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "\"\"\"\n",
+    "修正版 main_test4.py - 修复时钟同步间隔对误差影响的问题\n",
+    "\"\"\"\n",
+    "import heapq\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import ScalarFormatter\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "# 常量配置\n",
+    "NUM_NODES = 102  # 链式网络中的节点数\n",
+    "SYNC_INTERVAL = 0.03125  # 同步间隔 (31.25 ms)\n",
+    "# SYNC_INTERVAL = 1  # 同步间隔 (1s)\n",
+    "PHY_JITTER = 8e-9  # PHY抖动范围 (8 ns)\n",
+    "CLOCK_GRANULARITY = 8e-9  # 时钟粒度 (8 ns)\n",
+    "MAX_DRIFT_RATE = 10e-6  # 最大漂移率 (±10 ppm)\n",
+    "SIM_TIME = 60.0  # 仿真总时长 (秒)\n",
+    "PDELAY_INTERVAL = 1.0  # 传播延迟测量间隔 (1 s)\n",
+    "DRIFT_RATE_CHANGE = 1e-6  # 漂移率每秒变化范围 [0, 1] ppm/s\n",
+    "\n",
+    "# 新增配置参数\n",
+    "CLOCK_UPDATE_INTERVAL = 0.001  # 时钟更新间隔 (1 ms)\n",
+    "MAX_ADJUSTMENT_PER_SYNC = 0.5  # 每次同步最大调整比例 (50%)\n",
+    "\n",
+    "\n",
+    "class Clock:\n",
+    "    def __init__(self):\n",
+    "        self.drift_rate = np.random.uniform(-MAX_DRIFT_RATE, MAX_DRIFT_RATE)\n",
+    "        self.offset = 0.0  # 相对于主时钟的偏移\n",
+    "        self.time = 0.0  # 本地时间\n",
+    "        self.last_update_time = 0.0  # 上次更新时间\n",
+    "        self.accumulated_error = 0.0  # 累积误差\n",
+    "\n",
+    "    def update(self, current_sim_time):\n",
+    "        # 计算自上次更新后的时间间隔\n",
+    "        delta_t = current_sim_time - self.last_update_time\n",
+    "\n",
+    "        # 随机小幅调整漂移率\n",
+    "        self.drift_rate += np.random.uniform(-DRIFT_RATE_CHANGE, DRIFT_RATE_CHANGE) * delta_t\n",
+    "        self.drift_rate = np.clip(self.drift_rate, -MAX_DRIFT_RATE, MAX_DRIFT_RATE)\n",
+    "\n",
+    "        # 累积漂移误差\n",
+    "        drift_effect = delta_t * self.drift_rate\n",
+    "        self.accumulated_error += drift_effect\n",
+    "\n",
+    "        # 更新本地时间\n",
+    "        self.time += delta_t * (1.0 + self.drift_rate)\n",
+    "        self.last_update_time = current_sim_time\n",
+    "\n",
+    "        return self.time\n",
+    "\n",
+    "    def adjust(self, error):\n",
+    "        # 限制单次调整量，更符合实际时钟行为\n",
+    "        adjustment = np.sign(error) * min(abs(error), abs(error * MAX_ADJUSTMENT_PER_SYNC))\n",
+    "        self.time -= adjustment\n",
+    "\n",
+    "        # 记录剩余误差\n",
+    "        remaining_error = error - adjustment\n",
+    "        return remaining_error\n",
+    "\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, node_id):\n",
+    "        self.id = node_id\n",
+    "        self.clock = Clock()\n",
+    "        self.residence_time = 1e-3  # 驻留时间 (1 ms)\n",
+    "        self.propagation_delay = 50e-9  # 固定传播延迟 (50 ns)\n",
+    "        self.asymmetry = 0.0  # 链路非对称性 (默认对称)\n",
+    "        self.rate_ratio = 1.0  # 率比 (初始为1)\n",
+    "        self.neighbor_rate_ratio = 1.0  # 邻居率比 (初始为1)\n",
+    "\n",
+    "        # 记录误差数据\n",
+    "        self.pre_sync_errors = []  # 同步前误差（微秒）\n",
+    "        self.post_sync_errors = []  # 同步后误差（微秒）\n",
+    "\n",
+    "    def receive_sync(self, sync_time, correction_field, sim_time):\n",
+    "        # 接收Sync消息时添加PHY抖动和时钟粒度\n",
+    "        actual_receive_time = sync_time + self.propagation_delay + \\\n",
+    "                              np.random.uniform(0, PHY_JITTER) + \\\n",
+    "                              np.random.uniform(0, CLOCK_GRANULARITY)\n",
+    "\n",
+    "        # 计算本地时间与主时钟的偏差\n",
+    "        local_time = self.clock.time\n",
+    "        gm_time = sync_time + correction_field\n",
+    "        error = local_time - gm_time\n",
+    "\n",
+    "        # 记录同步前的误差（微秒）\n",
+    "        pre_sync_error = error * 1e6\n",
+    "        self.pre_sync_errors.append((sim_time, pre_sync_error))\n",
+    "\n",
+    "        # 调整本地时钟，获取剩余误差\n",
+    "        remaining_error = self.clock.adjust(error)\n",
+    "\n",
+    "        # 记录同步后的误差（微秒）\n",
+    "        post_sync_error = remaining_error * 1e6\n",
+    "        self.post_sync_errors.append((sim_time, post_sync_error))\n",
+    "\n",
+    "        # 添加驻留时间并转发Sync消息\n",
+    "        forward_time = actual_receive_time + self.residence_time\n",
+    "        return forward_time\n",
+    "\n",
+    "    def measure_pdelay(self, neighbor):\n",
+    "        # 发送Pdelay_Req消息\n",
+    "        t1 = self.clock.time\n",
+    "        t2 = neighbor.clock.time + np.random.uniform(0, PHY_JITTER)\n",
+    "\n",
+    "        # 发送Pdelay_Resp消息\n",
+    "        t3 = neighbor.clock.time\n",
+    "        t4 = self.clock.time + np.random.uniform(0, PHY_JITTER)\n",
+    "\n",
+    "        # 计算传播延迟（考虑非对称性）\n",
+    "        propagation_delay = ((t4 - t1) - self.neighbor_rate_ratio * (t3 - t2)) / 2\n",
+    "        self.propagation_delay = propagation_delay + self.asymmetry\n",
+    "\n",
+    "\n",
+    "class Network:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = [Node(i) for i in range(NUM_NODES)]\n",
+    "        self.grandmaster = self.nodes[0]\n",
+    "        self.event_queue = []  # 事件队列\n",
+    "        self.current_time = 0.0\n",
+    "        self.event_counter = 0  # 事件计数器\n",
+    "\n",
+    "        # 初始化事件队列\n",
+    "        self.initialize_events()\n",
+    "\n",
+    "    def initialize_events(self):\n",
+    "        # 安排首次同步消息\n",
+    "        self.schedule_event(0.0, self.send_sync, self.grandmaster)\n",
+    "\n",
+    "        # 安排首次传播延迟测量\n",
+    "        for i in range(1, NUM_NODES):\n",
+    "            self.schedule_event(0.0, self.measure_pdelay, self.nodes[i], self.nodes[i-1])\n",
+    "\n",
+    "        # 安排时钟更新\n",
+    "        self.schedule_event(0.0, self.update_clocks)\n",
+    "\n",
+    "    def schedule_event(self, time, callback, *args):\n",
+    "        # 将事件加入队列，使用事件计数器避免时间相同时的顺序问题\n",
+    "        heapq.heappush(self.event_queue, (time, self.event_counter, callback, args))\n",
+    "        self.event_counter += 1\n",
+    "\n",
+    "    def run_simulation(self):\n",
+    "        # 事件驱动仿真\n",
+    "        while self.event_queue and self.current_time < SIM_TIME:\n",
+    "            time, _, callback, args = heapq.heappop(self.event_queue)\n",
+    "            self.current_time = time\n",
+    "            callback(*args)\n",
+    "\n",
+    "    def update_clocks(self):\n",
+    "        # 更新所有节点的时钟\n",
+    "        for node in self.nodes:\n",
+    "            node.clock.update(self.current_time)\n",
+    "\n",
+    "        # 安排下一次时钟更新\n",
+    "        next_update = self.current_time + CLOCK_UPDATE_INTERVAL\n",
+    "        if next_update < SIM_TIME:\n",
+    "            self.schedule_event(next_update, self.update_clocks)\n",
+    "\n",
+    "    def send_sync(self, node):\n",
+    "        # 发送同步消息\n",
+    "        sync_time = self.current_time\n",
+    "        correction_field = 0.0\n",
+    "\n",
+    "        # 消息逐跳传播\n",
+    "        for i in range(1, NUM_NODES):\n",
+    "            forward_time = self.nodes[i].receive_sync(sync_time, correction_field, self.current_time)\n",
+    "            correction_field += self.nodes[i].propagation_delay * self.nodes[i].rate_ratio\n",
+    "            sync_time = forward_time\n",
+    "\n",
+    "        # 安排下一次同步消息\n",
+    "        next_sync = self.current_time + SYNC_INTERVAL\n",
+    "        if next_sync < SIM_TIME:\n",
+    "            self.schedule_event(next_sync, self.send_sync, node)\n",
+    "\n",
+    "    def measure_pdelay(self, node, neighbor):\n",
+    "        # 测量传播延迟\n",
+    "        node.measure_pdelay(neighbor)\n",
+    "\n",
+    "        # 安排下一次测量\n",
+    "        next_measure = self.current_time + PDELAY_INTERVAL\n",
+    "        if next_measure < SIM_TIME:\n",
+    "            self.schedule_event(next_measure, self.measure_pdelay, node, neighbor)\n",
+    "\n",
+    "    def save_results(self, filename_prefix):\n",
+    "        \"\"\"保存所有节点的同步前误差到CSV文件\"\"\"\n",
+    "        results_dir = \"simulation_results\"\n",
+    "        os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "        hops_to_save = [1, 10, 50, 100]  # 要保存的跳数\n",
+    "\n",
+    "        for hop in hops_to_save:\n",
+    "            if hop >= NUM_NODES:\n",
+    "                continue\n",
+    "\n",
+    "            filename = f\"{results_dir}/{filename_prefix}_hop{hop}.csv\"\n",
+    "\n",
+    "            # 提取误差数据\n",
+    "            node = self.nodes[hop]\n",
+    "            times, errors = zip(*node.pre_sync_errors) if node.pre_sync_errors else ([], [])\n",
+    "\n",
+    "            # 写入CSV\n",
+    "            with open(filename, 'w', newline='') as csvfile:\n",
+    "                writer = csv.writer(csvfile)\n",
+    "                writer.writerow([\"Time (s)\", \"Error (us)\"])\n",
+    "                for t, e in zip(times, errors):\n",
+    "                    writer.writerow([t, e])\n",
+    "\n",
+    "    def plot_results(self, hop):\n",
+    "        \"\"\"绘制特定跳数节点的时间误差\"\"\"\n",
+    "        if hop < 1 or hop >= NUM_NODES:\n",
+    "            print(f\"错误: 无效的跳数 {hop}，应在1和{NUM_NODES-1}之间。\")\n",
+    "            return\n",
+    "\n",
+    "        node = self.nodes[hop]\n",
+    "\n",
+    "        # 提取同步前误差数据\n",
+    "        times, errors = zip(*node.pre_sync_errors) if node.pre_sync_errors else ([], [])\n",
+    "\n",
+    "        # 绘制时间误差图\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.plot(times, errors, 'b-', linewidth=1.5, label=f'跳数={hop}')\n",
+    "        plt.xlabel('时间 (s)')\n",
+    "        plt.ylabel('时间误差 (微秒)')\n",
+    "        plt.title(f'时间误差随时间变化 (跳数={hop}, 同步间隔={SYNC_INTERVAL}s)')\n",
+    "        plt.grid(True, alpha=0.3)\n",
+    "        plt.legend()\n",
+    "\n",
+    "        # 打印误差统计\n",
+    "        if errors:\n",
+    "            error_min = min(errors)\n",
+    "            error_max = max(errors)\n",
+    "            error_avg = sum(errors) / len(errors)\n",
+    "            error_std = np.std(errors)\n",
+    "            print(f\"跳数 {hop} 的统计数据:\")\n",
+    "            print(f\"  最小误差: {error_min:.3f} 微秒\")\n",
+    "            print(f\"  最大误差: {error_max:.3f} 微秒\")\n",
+    "            print(f\"  平均误差: {error_avg:.3f} 微秒\")\n",
+    "            print(f\"  标准差: {error_std:.3f} 微秒\")\n",
+    "            print(f\"  误差范围: [{error_min:.3f}, {error_max:.3f}] 微秒\")\n",
+    "\n",
+    "            # 添加统计信息到图表\n",
+    "            plt.figtext(0.15, 0.85, f\"最小值: {error_min:.3f} μs\\n\"\n",
+    "                                  f\"最大值: {error_max:.3f} μs\\n\"\n",
+    "                                  f\"均值: {error_avg:.3f} μs\\n\"\n",
+    "                                  f\"标准差: {error_std:.3f} μs\",\n",
+    "                      bbox=dict(facecolor='white', alpha=0.8))\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "def run_comparison():\n",
+    "    \"\"\"运行两种同步间隔的对比仿真\"\"\"\n",
+    "    # 运行31.25ms间隔仿真\n",
+    "    print(\"\\n=== 运行31.25ms同步间隔仿真 ===\")\n",
+    "    SYNC_INTERVAL = 0.03125\n",
+    "    network1 = Network()\n",
+    "    network1.run_simulation()\n",
+    "    network1.save_results(\"interval_31_25ms\")\n",
+    "\n",
+    "    # 显示关键节点的结果\n",
+    "    for hop in [1, 10, 50, 100]:\n",
+    "        if hop < NUM_NODES:\n",
+    "            network1.plot_results(hop)\n",
+    "\n",
+    "    # 运行1s间隔仿真\n",
+    "    print(\"\\n=== 运行1s同步间隔仿真 ===\")\n",
+    "    SYNC_INTERVAL = 1.0\n",
+    "    network2 = Network()\n",
+    "    network2.run_simulation()\n",
+    "    network2.save_results(\"interval_1s\")\n",
+    "\n",
+    "    # 显示关键节点的结果\n",
+    "    for hop in [1, 10, 50, 100]:\n",
+    "        if hop < NUM_NODES:\n",
+    "            network2.plot_results(hop)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_comparison()"
+   ],
+   "id": "ed1ab4c41c84d5f6"
   }
  ],
  "metadata": {
