画了所有的图
明天再整理一波。

--- a/version/20250413/main20250413.ipynb
+++ b/version/20250413/main20250413.ipynb
@@ -27,7 +27,7 @@
     "import math\n",
     "\n",
     "# Create the output directory\n",
-    "os.makedirs(\"version/20250413/output_data\", exist_ok=True)\n",
+    "os.makedirs(\"output_data\", exist_ok=True)\n",
     "\n",
     "# Parameters from the paper\n",
     "PHY_JITTER_MAX = 8e-9  # 8 ns\n",
