--- a/DATA_100hops/Data_100hops_20250417.ipynb
+++ b/DATA_100hops/Data_100hops_20250417.ipynb
@@ -1457,13 +1457,13 @@
     "# Target hops for plotting\n",
     "target_hops = [1, 7, 10, 25, 50, 75, 100]\n",
     "colors = {\n",
-    "    '1': '#E41A1C',  # 深红\n",
-    "    '2': '#377EB8',  # 深蓝\n",
-    "    '3': '#4DAF4A',  # 深绿\n",
-    "    '4': '#984EA3',  # 紫色\n",
-    "    '5': '#FF7F00',  # 橙色\n",
-    "    '6': '#FFD700',  # 黄色\n",
-    "    '7': '#A65628'  # 棕色\n",
+    "    '1': '#003f5c',  # 深蓝色\n",
+    "    '2': '#58508d',  # 紫蓝色\n",
+    "    '3': '#bc5090',  # 紫红色\n",
+    "    '4': '#ff6361',  # 珊瑚红\n",
+    "    '5': '#ffa600',  # 橙黄色\n",
+    "    '6': '#2c9c4c',  # 翠绿色\n",
+    "    '7': '#5e6472'  # 石板灰\n",
     "}\n",
     "\n",
     "# Create plot of time error distributions with modified styling\n",
